--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,10 +4,10 @@ services:
     container_name: zabbix-server-mysql
     restart: unless-stopped
     environment:
-      MYSQL_ROOT_PASSWORD: pass
-      MYSQL_USER: zabbix
-      MYSQL_PASSWORD: zabbix
-      MYSQL_DATABASE: zabbix
+      MYSQL_ROOT_PASSWORD: ${MYSQL_ROOT_PASSWORD}
+      MYSQL_USER: ${MYSQL_USER}
+      MYSQL_PASSWORD: ${MYSQL_USER_PASSWORD}
+      MYSQL_DATABASE: ${MYSQL_DATABASE}
     volumes:
       - mysql-data:/var/lib/mysql/data
       - ./my.cnf:/etc/mysql/conf.d/my.cnf
@@ -19,15 +19,15 @@ services:
     container_name: zabbix-server
     restart: unless-stopped
     environment:
-      DB_SERVER_HOST: zabbix-server-mysql
-      DB_SERVER_PORT: 3306
-      MYSQL_USER: zabbix
-      MYSQL_PASSWORD: zabbix
-      MYSQL_DATABASE: zabbix
+      DB_SERVER_HOST: ${MARIADB_HOST_NAME}
+      DB_SERVER_PORT: ${MYSQL_PORT}
+      MYSQL_USER: ${MYSQL_USER}
+      MYSQL_PASSWORD: ${MYSQL_USER_PASSWORD}
+      MYSQL_DATABASE: ${MYSQL_DATABASE}
     depends_on:
       - zabbix-server-mysql
     ports:
-      - "10051:10051"
+      - "${ZABBIX_PORT}:10051"
     volumes:
       - zabbix-server-data:/var/lib/zabbix
       - zabbix-snmptraps-data:/var/lib/zabbix/snmptraps
@@ -44,14 +44,14 @@ services:
       - zabbix-server-mysql
       - zabbix-server
     environment:
-      DB_SERVER_HOST: zabbix-server-mysql
-      MYSQL_USER: zabbix
-      MYSQL_PASSWORD: zabbix
-      MYSQL_DATABASE: zabbix
-      ZBX_SERVER_HOST: zabbix-server
-      PHP_TZ: Asia/Phnom_Penh
+      DB_SERVER_HOST: ${MARIADB_HOST_NAME}
+      MYSQL_USER: ${MYSQL_USER}
+      MYSQL_PASSWORD: ${MYSQL_USER_PASSWORD}
+      MYSQL_DATABASE: ${MYSQL_DATABASE}
+      ZBX_SERVER_HOST: ${ZABBIX_HOST_NAME}
+      PHP_TZ: ${TIMEZONE}
     ports:
-      - "8087:8080"
+      - "${NGINX_PORT}:8080"
     volumes:
       - zabbix-web-data:/usr/share/zabbix
     networks:
@@ -65,8 +65,8 @@ services:
       - zabbix-server
     environment:
       ZBX_HOSTNAME: "zabbix-server"
-      ZBX_SERVER_HOST: zabbix-server
-      ZBX_SERVER_PORT: '10051'
+      ZBX_SERVER_HOST: ${ZABBIX_HOST_NAME}
+      ZBX_SERVER_PORT: ${ZABBIX_PORT}
       ZBX_SERVER_ACTIVE: zabbix-server
     networks:
       - zabbix-ipv4
