--- a/ansible/roles/deploy_zabbix_agent/tasks/installations.yml
+++ b/ansible/roles/deploy_zabbix_agent/tasks/installations.yml
@@ -27,9 +27,10 @@
 
 - name: genernate pre-shared key
   shell: "openssl rand -hex 32 > /etc/zabbix/zabbix_agent2.psk"
-  creates: /etc/zabbix/zabbix_agnet2.psk
   args:
-    executable: /bin//bash
+    creates: /etc/zabbix/zabbix_agnet2.psk
+    executable: /bin/bash
+  become: true
 
 - name: configuration file to connect to zabbix server
   template:
@@ -41,3 +42,4 @@
   systemd_service:
     state: restarted
     name: zabbix-agent2
+  become: true
